# Waveform-Editor

./: CONTRIBUTING.md  LICENSE.txt  README.md  README.rst  option_test.py  pyproject.toml  test_nice.py  waveform_editor_options.yaml
.github/workflows/: ci.yml  publish_pypi.yml
docs/: Makefile  conf.py  index.rst  make.bat  usage.rst
docs/source/: cli.rst  conf.py  derived.rst  example_yaml.rst  gui.rst  index.rst  installing.rst  shape_editor_install.rst  tendencies.rst  yaml_format.rst
tests/: test_annotations.py  test_base_tendency.py  test_cli.py  test_configuration.py  test_derived_waveform.py  test_exporter.py  test_muscle3.py  test_test.py  test_util.py  test_waveform.py  test_waveform_exporter.py  test_yaml_parser.py
tests/tendencies/: test_base.py  test_constant.py  test_linear.py  test_piecewise.py  test_repeat.py  test_smooth.py
tests/test_yaml/: example.yaml  test.yaml  test_constant.yaml
waveform_editor/: annotations.py  base_waveform.py  cli.py  config_bounds.py  configuration.py  dependency_graph.py  derived_waveform.py  dict_editor.py  exporter.py  group.py  muscle3.py  options.py  pcssp_exporter.py  plot.py  plot_test.py  settings.py  test.yaml  test2.yaml  test3.yaml  user_config.py  util.py  waveform.py  waveform_editor_gui.py  waveform_exporter.py  xml_exporter.py  yaml_globals.py  yaml_parser.py
waveform_editor/gui/: editor.py  export_dialog.py  filebrowser.py  filedialog.py  globals_dialog.py  io_controller.py  main.py  plotter.py  plotter_base.py  plotter_edit.py  plotter_view.py  shape_editor.py  start_up.py  util.py  waveform_editor_gui.py  waveform_editor_widget.py  waveform_plotter.py  waveform_selector.py
waveform_editor/shape_editor/: coil_currents.py  nice_integration.py  nice_params.py  nice_plotter.py  (+4 more)
(+41 files in other folders)
